Version 0.9.35: 2020-08-23

Added support for alarms (shell command triggered)
and resetting of dongle when no telegrams have been received
for a preset time, or if there are communication errors
with the dongle.

Added support for the Waterstar M meter.

Bug fix for long term problem where wmbusmeters did not properly
shut down background rtl_sdr|rtl_wmbus pipeline.

Eric added support for the Multical 403. Thanks Eric!

Bibo made snapcraft fixes. The snap now builds properly! Thanks Bibo!

Version 0.9.34: 2020-07-09

Wmbusmeters should now properly handle
partially encrypted telegrams in mode 5 and 7.

The docker image now builds rtl_wmbus from the weetmuts
fork.

Bibo supplied code to auto-update the Docker hub README.

Version 0.9.33: 2020-07-01

Bibo made docker fixes. Now rtl_sdr, rtl_wmbus
and rtl_433 are part of the docker image. Thanks Bibo!

Version 0.9.32: 2020-06-30

Added support for the Lansen Smoke detector, Door/Window sensor
and Pulse counter.

The tool wmbusmeters-admin can now factory reset your amb8465 dongle.

Version 0.9.31: 2020-05-09

You can add comments in the conf and meter files.
A comment is a line that starts with #.

When using --format=fields you can now supply
--selectfields=id,total_m3 to print only the selected fields.
Run with --listfields to see all the avilable fields from a meter.

Improvements in the izar driver. Thanks Erwan!

Bug fixes in the amd8465 driver. Thanks Henry N.!

Version 0.9.30: 2020-04-22

Erwan added support for building on FreeBSD. Thanks Erwan!

Version 0.9.29: 2020-04-03

Re-add the wmbusmeters.service file so
that the daemon can be easily started without
udev rules. Check the README.

Version 0.9.28: 2020-03-08

Improved docker work, thanks Bibo!
Better shell scripts for installing and daemon mode,
in preparation for rpm packaging. Thanks Damian!

Version 0.9.27: 2020-02-26

Added support for the apator08 meter.
Fixed important bug that caused rtl_sdr to hang
when daemon was stopped/restarted.