@@ -1,5 +1,6 @@
 /*
- Copyright (C) 2017-2019 Fredrik Öhrström
+ Copyright (C) 2017-2020 Fredrik Öhrström
+                    2020 Avandorp
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
