@@ -32,7 +32,8 @@ METERS="MyWarmWater supercom587 12345678 NOKEY
       Elen3       ehzp        55995599 NOKEY
       Vatten      apator08    004444dd NOKEY
       Wasser      rfmtx1      74737271 NOKEY
-      Woter       waterstarm  20096221 BEDB81B52C29B5C143388CBB0D15A051"
+      Woter       waterstarm  20096221 BEDB81B52C29B5C143388CBB0D15A051
+      Witer       topaseskr   78563412 NOKEY"
 
 cat simulations/simulation_t1.txt | grep '^{' > $TEST/test_expected.txt
 $PROG --format=json simulations/simulation_t1.txt $METERS  > $TEST/test_output.txt
